[package]
name = "vantage"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "6"
eframe = { version = "0.31", features = ["wgpu"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["file", "image"] }
glam = "0.29"
gpx = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
kamadak-exif = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sgp4 = "2.4"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
